--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,5 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.0
-Date: ??.??.2019
-  Features:
-    - ....
+Date: 03.08.2019
+  Initial Commit:
+    - added Balancer Parts, that can be used to balance belts and their lanes
