--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.1
+Date: 04.08.2019
+  Bugfix:
+    - fixed entity-name typo
+    - fixed endless loop, when removing input-belts
+---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 03.08.2019
   Initial Commit:
