--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.1
+Date: xx.xx.2019
+  Feature:
+    - added posibility to connect underground belts directly
+---------------------------------------------------------------------------------------------------
 Version: 1.0.1
 Date: 04.08.2019
   Bugfix:
