--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,9 @@
 ---------------------------------------------------------------------------------------------------
-Version: 1.1.1
+Version: 1.1.0
 Date: xx.xx.2019
   Feature:
-    - added posibility to connect underground belts directly
+    - added direct connection to underground belts
+    - added direct connection to splitters
   Bugfix:
     - Entity-Icon is shown now (e.g. in destrcution planner)
 ---------------------------------------------------------------------------------------------------
