--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.0
-Date: xx.xx.2019
+Date: 15.09.2019
   Feature:
     - added direct connection to underground belts
     - added direct connection to splitters
