--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.1
+Date: 15.09.2019
+  Bugfix:
+    - fixed crash, when removing Balancer Part
+    - fixed connecting to Splitters
+---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: 15.09.2019
   Feature:
