--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.3
+Date: xx.09.2019
+  Bugfix:
+    - fixed compression of belts with decimal speed
+---------------------------------------------------------------------------------------------------
 Version: 1.1.2
 Date: 16.09.2019
   Bugfix:
