--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.3
-Date: xx.09.2019
+Date: 24.09.2019
   Bugfix:
     - fixed compression of belts with decimal speed
 ---------------------------------------------------------------------------------------------------
