--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.5
+Date: 30.12.2019
+  Bugfix:
+    - fixed map crash, when bobs belt overhaul is disabled
+---------------------------------------------------------------------------------------------------
 Version: 1.1.4
 Date: 22.12.2019
   Bugfix:
