--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.0
+Date: 21.01.2020
+  Added:
+    - Compatibility with factorio 0.18.0
+---------------------------------------------------------------------------------------------------
 Version: 1.1.6
 Date: 16.01.2020
   Added:
