--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,9 @@
 ---------------------------------------------------------------------------------------------------
-Version: 1.2.0
+Version: 2.0.0
 Date: 21.01.2020
-  Added:
+  Breaking changes:
     - Compatibility with factorio 0.18.0
+    - Incompatible with factorio 0.17 now!
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.6
 Date: 16.01.2020
