--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.1
+Date: 01.02.2020
+  Bugfix:
+    - Reenabled Bob's Mods Integration
+---------------------------------------------------------------------------------------------------
 Version: 2.0.0
 Date: 21.01.2020
   Breaking changes:
