fixed crash, when boblogistics is not installed

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.2
+Date: 01.02.2020
+  Bugfix:
+    - Fixed migration, when Bobs Mods are not installed
+---------------------------------------------------------------------------------------------------
 Version: 2.0.1
 Date: 01.02.2020
   Bugfix:
