Added workaround to fix infinite loop, when removing balancer-parts.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: x.x.x
+Date: xx.xx.xxxx
+  Bugfix:
+    - Added workaround to fix infinite loop, when removing balancer-parts.
+---------------------------------------------------------------------------------------------------
 Version: 2.0.2
 Date: 01.02.2020
   Bugfix:
