--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
-Version: x.x.x
-Date: xx.xx.xxxx
+Version: 2.0.3
+Date: 19.02.2020
   Bugfix:
     - Added workaround to fix infinite loop, when removing balancer-parts.
 ---------------------------------------------------------------------------------------------------
