--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.7
+Date: 19.02.2020
+  Bugfix:
+    - Added workaround to fix infinite loop, when removing balancer-parts.
+---------------------------------------------------------------------------------------------------
 Version: 1.1.6
 Date: 16.01.2020
   Added:
