--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,11 @@ Date: 19.02.2020
   Bugfix:
     - Added workaround to fix infinite loop, when removing balancer-parts.
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.7
+Date: 19.02.2020
+  Bugfix:
+    - Added workaround to fix infinite loop, when removing balancer-parts.
+---------------------------------------------------------------------------------------------------
 Version: 2.0.2
 Date: 01.02.2020
   Bugfix:
