--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.8
+Date: 22.02.2020
+  Bugfix:
+    - Fixed freeze, when updating to 1.1.7. (This version can have long migration times!)
+---------------------------------------------------------------------------------------------------
 Version: 2.0.3
 Date: 19.02.2020
   Bugfix:
