fixed that underground-belts are connected, without facing balancer-part

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: Unreleased
+Date: xx.xx.xxxx
+  Bugfix:
+    - Fixed that underground-belts are connected, even if they are not pointing to a balancer-part.
+---------------------------------------------------------------------------------------------------
 Version: 2.1.0
 Date: 04.03.2020
   Bugfix:
