--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,18 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.1/2.1.1
+Date: 11.03.2020
+  Bugfix:
+    - Fixed that underground-belts are connected, even if they are not pointing to a balancer-part.
+    - Output-belts are now compressed, when input-belts are slower than the output-belts.
+    - Output-belts are now compressed, when they are faster than 120 items/min (new max speed: 240 items/min)
+---------------------------------------------------------------------------------------------------
+Version: 2.1.0
+Date: 04.03.2020
+  Bugfix:
+    - Rebuild the whole mod. It has a new, more robust code base now. This fixes a few issues, with tracking balancer and its belts. (This version can have long migration times!)
+  Added:
+    - Polish Translation
+---------------------------------------------------------------------------------------------------
 Version: 1.2.0
 Date: 04.03.2020
   Bugfix:
