--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.3/2.1.3
+Date: x.04.2020
+  Bugfix:
+    - Fixed crash, when other mods do a fast-replace of belts.
+---------------------------------------------------------------------------------------------------
 Version: 1.2.2/2.1.2
 Date: 17.03.2020
   Feature:
