--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.3/2.1.3
+Date: 22.04.2020
+  Added:
+    - Compatibility with mods, that are changing the direction of belts directly (e.g. Picker Belt Tools). It may take a few seconds until the change is registered, dont rotate or remove the belt in that time, it will cause a crash!!
+  Bugfix:
+    - Fixed crash, when other mods do a fast-replace of belts.
+---------------------------------------------------------------------------------------------------
 Version: 1.2.2/2.1.2
 Date: 17.03.2020
   Feature:
