--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 3.0.0
+Date: 22.04.2020
+  Added:
+    - Compatibility with Factorio 1.1
+---------------------------------------------------------------------------------------------------
 Version: 1.2.3/2.1.3
 Date: 22.04.2020
   Added:
