--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 3.1.3
-Date: 31.07.2022
+Date: 04.08.2022
   Bugfix:
     - Fixed bug with in-game tutorials
-    - Fixed crash with invalid key to next (with global.belts)
+    - Fixed crash with invalid key to next (with global.belts and with balancer.output_lanes)
 ---------------------------------------------------------------------------------------------------
 Version: 3.1.2
 Date: 23.07.2022
